//
//  AccessibilityIdentifiers.swift
//  DoroDoro
//
//  Created by Jinwoo Kim on 3/8/21.
//

import Foundation

internal struct AccessibilityIdentifiers {
    internal struct SearchVC {
        internal static let searchField: String = "SearchVC.SearchField"
    }
}
