...
*/

/* */
"DORODORO" = "DoroDoro";

/* */
"TABBAR_SEARCH_VIEW_CONTROLLER_TITLE" = "Search";

/* */
"TABBAR_BOOKMARKS_VIEW_CONTROLLER_TITLE" = "Bookmarks";

/* */
"TABBAR_SETTINGS_VIEW_CONTROLLER_TITLE" = "Settings";
...
